implementing schur CG class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,14 @@ set(a2000DIR
 
 set(HYBRID_SRC
   input_functions.cu
-  schur_complement_cg.cu)
+  schur_complement_cg.cu
+  SchurComplementConjugateGradient.cu)
 
 set(PERM_SRC
   permcheck.cu)
 
 set(RUIZ_SRC
-  Ruiz_scaling.cu)
+  matrix_vector_ops.cu)
 
 set(test1_args
   ${a200DIR}/block_H_matrix_ACTIVSg200_AC_09.mtx
