--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,16 @@
 set(HYBRID_SRC
   input_functions.cpp
+  MMatrix.cpp
+  cuda_memory_utils.cu
   SchurComplementConjugateGradient.cu
+  CholeskyClass.cu
+  PermClass.cu
+  RuizClass.cu
+  SpgemmClass.cu
   permcheck.cu
+  matrix_matrix_ops.cu
   matrix_vector_ops.cu
   vector_vector_ops.cu
-  cuda_memory_utils.cu
 )
 
 
