Prevent CUDA-specific code to be included through `constants.hpp` header file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(HYBRID_SRC
-  input_functions.cu
+  input_functions.cpp
   SchurComplementConjugateGradient.cu
   permcheck.cu
   matrix_vector_ops.cu
