- Put prototypes of cuSOLVER dependent functions in a separate header file. - Clean-up include directives.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,16 @@
 set(HYBRID_SRC
-  cuda_memory_utils.cu
   MMatrix.cpp
+  input_functions.cpp
   PermClass.cpp
   RuizClass.cpp
+)
+
+set(HYBRID_SRC_CUDA
+  cuda_memory_utils.cu
+  cusparse_utils.cu
   matrix_matrix_ops.cu
   matrix_vector_ops.cu
   vector_vector_ops.cu
-  input_functions.cpp
   permcheck.cu
   SchurComplementConjugateGradient.cu
   CholeskyClass.cu
@@ -14,8 +18,6 @@ set(HYBRID_SRC
   HykktSolver.cu
 )
 
-
-set_source_files_properties(${HYBRID_SRC} PROPERTIES LANGUAGE CUDA)
-add_library(hybrid OBJECT ${HYBRID_SRC} )
-set_target_properties(hybrid PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+set_source_files_properties(${HYBRID_SRC_CUDA} PROPERTIES LANGUAGE CUDA)
+add_library(hybrid OBJECT ${HYBRID_SRC} ${HYBRID_SRC_CUDA})
 
