Reduce dependencies on CUDA compiler.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,21 @@
 set(HYBRID_SRC
   MMatrix.cpp
   input_functions.cpp
+  vector_vector_ops.cpp
+  cusparse_utils.cpp
+  matrix_matrix_ops.cpp
   PermClass.cpp
   RuizClass.cpp
+  SchurComplementConjugateGradient.cpp
+  CholeskyClass.cpp
+  SpgemmClass.cpp
+  HykktSolver.cpp
 )
 
 set(HYBRID_SRC_CUDA
   cuda_memory_utils.cu
-  cusparse_utils.cu
-  matrix_matrix_ops.cu
   matrix_vector_ops.cu
-  vector_vector_ops.cu
   permcheck.cu
-  SchurComplementConjugateGradient.cu
-  CholeskyClass.cu
-  SpgemmClass.cu
-  HykktSolver.cu
 )
 
 set_source_files_properties(${HYBRID_SRC_CUDA} PROPERTIES LANGUAGE CUDA)
