Install rules added for examples, lib, and include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,25 @@ project(HyKKT VERSION "0.0.1")
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(PACKAGE_NAME  "HyKKT")
+set(PACKAGE_TARNAME "hykkt")
+
 option(HYKKT_TEST_WITH_BSUB "Use `jsrun` instead of `mpirun` commands when running tests" OFF)
 set(HYKKT_CTEST_OUTPUT_DIR ${PROJECT_BINARY_DIR} CACHE PATH "Directory where CTest outputs are saved")
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH)
+
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+# For Unix CMAKE_INSTALL_PREFIX defaults to /usr/local
+# If user doesn't have permission to write to /usr/local than the below line is recommended
+#set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/install" CACHE PATH "${CMAKE_SOURCE_DIR}/install"FORCE)
+
+message(STATUS "Installation Destination is ${CMAKE_INSTALL_PREFIX}")
 
 # Configure CUDA
 include(CheckLanguage)
 enable_language(CUDA)
 check_language(CUDA)
-
-#find_package(CUDA REQUIRED)
 
 if(NOT DEFINED CMAKE_CUDA_STANDARD)
   set(CMAKE_CUDA_STANDARD 11)
@@ -32,21 +41,37 @@ set(CMAKE_CUDA_SEPARABLE_COMPILATION OFF)
 # Link in required cuda dependencies
 find_package(CUDAToolkit REQUIRED)
 
-add_library(cuda_libs INTERFACE)
-target_link_libraries(cuda_libs INTERFACE
-                      CUDA::cusolver
-                      CUDA::cublas
-                      CUDA::cusparse
-                      CUDA::cudart)
+include(FindHykktCudaLibraries)
 
 # Enable testing
 enable_testing()
 
-# TODO - use target based includes
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src
                     ${CMAKE_CURRENT_SOURCE_DIR}/examples)
 
 # Add code directory
 add_subdirectory(src)
+
+# create package version file
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(HyKKTConfigVersion.cmake
+                                 VERSION ${CMAKE_PROJECT_VERSION}
+                                 COMPATIBILITY AnyNewerVersion)
+
+install(EXPORT HyKKT-targets
+        FILE HyKKTTargets.cmake
+        NAMESPACE HyKKT::
+        DESTINATION 
+        share/hykkt/cmake)
+
+configure_package_config_file(HyKKTConfig.cmake.in
+                              ${CMAKE_CURRENT_BINARY_DIR}/HyKKTConfig.cmake
+                              INSTALL_DESTINATION share/hykkt/cmake)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/HyKKTConfig.cmake"
+        "${PROJECT_SOURCE_DIR}/build/HyKKTConfigVersion.cmake"
+        DESTINATION share/hykkt/cmake)
+
 add_subdirectory(examples)
+
 
